# ProgettoPCS2025

./: CMakeLists.txt  main.cpp  main_test.cpp
Debug/: CMakeCache.txt  Makefile  ProgettoPCS2025  cmake_install.cmake
Debug/ExportParaview/: Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
Documentation/: scriptUML.txt
Platonic_solids/Icosaedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Platonic_solids/Ottaedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
Platonic_solids/Tetraedo/: Cell0Ds.csv
Platonic_solids/Tetraedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
src/: CMakeLists.txt  PolygonalMesh.hpp  PolyhedralMesh  PolyhedralMesh.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_polyhedron.hpp
